# Veila

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/systemd/: veila-idle.service  veilad.service
assets/themes/: beach.toml  boracay.toml  catppuccin.toml  city-lights.toml  default.toml  diagonal.toml  frost.toml  kitty.toml  los-angeles.toml  midnight.toml  normandy.toml  samurai.toml  santorini.toml  seceda.toml  shanghai.toml  skyline.toml  style1.toml  style2.toml  test.toml  tokyo.toml  window.toml
crates/common/: Cargo.toml
crates/common/src/: battery.rs  config.rs  error.rs  ipc.rs  lib.rs  now_playing.rs  power.rs  secret.rs  time.rs  weather.rs
crates/common/src/config/: assets.rs  background.rs  battery.rs  color.rs  fingerprint.rs  include.rs  lock.rs  mod.rs  now_playing.rs  tests.rs  visuals.rs  weather.rs
crates/common/src/config/tests/: bundled_defaults_tests.rs  defaults_tests.rs  file_loading_tests.rs  mod.rs  nested_visual_fixture.rs  nested_visual_tests.rs  parsing_tests.rs  path_resolution_tests.rs  theme_loading_tests.rs  theme_mutation_tests.rs
crates/common/src/config/validation/: schema.rs
crates/common/src/config/validation/schema/: visuals.rs
crates/common/src/config/visuals/: backdrop.rs  clock.rs  identity.rs  indicators.rs  input.rs  layer.rs  layout.rs  mod.rs  now_playing.rs  outputs.rs  power.rs  weather.rs
crates/common/src/ipc/: line.rs
crates/curtain/: Cargo.toml
crates/curtain/src/: app.rs  auth.rs  background.rs  background_cache.rs  background_loader.rs  control.rs  handlers.rs  keyboard_cache.rs  lib.rs  main.rs  preview.rs  reload.rs  render.rs  scene.rs  state.rs
crates/curtain/src/background/: loader.rs  mod.rs  slideshow.rs  transition.rs
crates/curtain/src/ipc/: auth.rs  control.rs  mod.rs
crates/curtain/src/state/: memory.rs  mod.rs  power.rs  profiler.rs  resume.rs
crates/curtain/src/state/interaction/: auth.rs  control.rs  mod.rs  shell.rs
crates/curtain/src/wayland/: handlers.rs  mod.rs  scene.rs
crates/curtain/src/wayland/handlers/: input.rs  mod.rs  power.rs  registry.rs  session.rs
crates/curtain/src/wayland/scene/: commit.rs  prepare.rs  ready.rs  render.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app.rs  control.rs  lib.rs  main.rs  options.rs
crates/daemon/src/adapters/: fprint.rs  ipc.rs  logind.rs  mod.rs  pam.rs  power.rs  process.rs
crates/daemon/src/adapters/logind/: mod.rs  proxy.rs  session.rs  tests.rs
crates/daemon/src/app/: battery.rs  cache.rs  fingerprint.rs  helpers.rs  memory.rs  mod.rs  mpris.rs  output_probe.rs  prewarm.rs  runtime.rs  state.rs  suspend.rs  watch.rs  weather.rs
crates/daemon/src/app/events/: auth.rs  control.rs  lifecycle.rs  mod.rs  shutdown.rs
crates/daemon/src/app/mpris/: signals.rs  tests.rs
crates/daemon/src/app/runtime/: auth.rs  lock.rs  mod.rs  state.rs
crates/daemon/src/control/: daemon.rs  idle.rs  init.rs  mod.rs  theme.rs
crates/daemon/src/control/doctor/: mod.rs  renderer.rs  runtime.rs  services.rs  wayland.rs
crates/daemon/src/domain/: auth.rs  lock_state.rs  mod.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: backend.rs  background.rs  background_render_cache.rs  background_source_cache.rs  blur.rs  lib.rs  masked.rs  panel.rs  progress.rs  shape.rs  shm.rs  symbol.rs  text.rs
crates/renderer/src/backend/: gpu.rs  tests.rs
crates/renderer/src/backend/gpu/: color.rs  fallback.rs  pipeline.rs  surface.rs  tests.rs
crates/renderer/src/background/: asset.rs  mod.rs  render.rs  render_cache.rs  source_cache.rs  tests.rs  treatment.rs
crates/renderer/src/draw/: avatar.rs  cover.rs  icon.rs  layer.rs  masked.rs  mod.rs  panel.rs  progress.rs  shape.rs  skia.rs  symbol.rs  text.rs
crates/renderer/src/draw/icon/: battery.rs  mod.rs  parser.rs  power.rs  raster.rs  tests.rs  weather.rs
crates/renderer/src/draw/layer/: blur.rs  mod.rs  shapes.rs  tests.rs
crates/renderer/src/draw/shape/: fill.rs  mod.rs  rounded.rs  tests.rs
crates/renderer/src/draw/text/: context.rs  layout.rs  mod.rs  raster.rs  tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  main.rs  shell.rs  theme.rs
crates/ui/src/shell/: avatar.rs  battery.rs  clock.rs  emergency.rs  input.rs  mod.rs  now_playing.rs  pointer.rs  render.rs  state.rs  style.rs  tests.rs  theme.rs  weather.rs
crates/ui/src/shell/render/: cache.rs  indicators.rs  layout.rs  mod.rs  model.rs  now_playing.rs  overlay.rs  tests.rs  widgets.rs
crates/ui/src/shell/render/layout/: anchors.rs  layer.rs  metrics.rs  mod.rs  tests.rs  types.rs
crates/ui/src/shell/render/model/: mod.rs  standard.rs  tests.rs
crates/ui/src/shell/render/styles/: color.rs  mod.rs  surface.rs  text.rs
crates/ui/src/shell/render/tests/: auth_style_tests.rs  header_style_tests.rs  layout_tests.rs  mod.rs  text_cache_tests.rs  widget_style_tests.rs
crates/ui/src/shell/theme/: color.rs  mod.rs  tests.rs
debian/: changelog  control  copyright  rules  veila.pam
docs/: background.md
docs/man/: veila.1
packaging/deb/: build-deb.sh
packaging/rpm/: build-rpm.sh
scripts/: check-latency
