[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/curtain",
    "crates/daemon",
    "crates/renderer",
    "crates/ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kwylock Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kwimy/kwylock"

[workspace.dependencies]
anyhow = "1"
calloop = { version = "0.14", features = ["signals"] }
futures-util = "0.3"
nix = { version = "0.31", features = ["signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
