[package]
name = "kwylock-curtain"
description = "Secure curtain bootstrap binary for Kwylock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kwylock-curtain"
path = "src/main.rs"

[dependencies]
kwylock-common = { path = "../common" }
anyhow = { workspace = true }
calloop = { workspace = true }
smithay-client-toolkit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
