[package]
name = "veila-curtain"
description = "Secure curtain bootstrap binary for Veila"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "veila-curtain"
path = "src/main.rs"

[dependencies]
veila-common = { path = "../common" }
veila-renderer = { path = "../renderer" }
veila-ui = { path = "../ui" }
anyhow = { workspace = true }
calloop = { workspace = true }
smithay-client-toolkit = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
