[package]
name = "kwylock-daemon"
description = "Lock orchestration daemon for Kwylock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kwylockd"
path = "src/main.rs"

[dependencies]
kwylock-common = { path = "../common" }
anyhow = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
