[package]
name = "veila-daemon"
description = "Lock orchestration daemon for Veila"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "veilad"
path = "src/main.rs"

[dependencies]
veila-common = { path = "../common" }
veila-renderer = { path = "../renderer" }
anyhow = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
nonstick = { workspace = true }
smithay-client-toolkit = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
