[package]
name = "veila-renderer"
description = "Shared rendering primitives for Veila"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
font8x8 = { workspace = true }
image = { workspace = true }
smithay-client-toolkit = { workspace = true }
thiserror = { workspace = true }
