[package]
name = "veila-ui"
description = "Password and lock scene UI process for Veila"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "veila-ui"
path = "src/main.rs"

[dependencies]
veila-common = { path = "../common" }
veila-renderer = { path = "../renderer" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

